@@ -1,3 +1,11 @@
+23 November 2012: Matthijs
+- Add and remove empty non-terminal NSEC3s when adding/removing signed
+  delegation.
+
+20 November 2012: Matthijs
+- Only commit zone transfers that are completely stored on disk (a
+  connection reset may store half a zone transfer on disk)
+
 7 November 2012: Matthijs
 - Don't add double RRSIGs generated by same key for DNSKEY RRset.
 
